@@ -1,3 +1,11 @@
+2004-07-15  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* perso/mycode.el:
+	fixed mess in this file (cvs bug?)
+
+	* dotemacs.el
+	(hi-lock-mode): reactivate
+
 2004-07-14  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* dotemacs.el
